Implemented feature of Promo Codes